--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
+    "archiver": "*",
     "async": "~0.9.0",
     "body-parser": "~1.9.0",
     "bower": "~1.3.8",
@@ -30,6 +31,7 @@
     "helmet": "~0.5.0",
     "lodash": "~2.4.1",
     "method-override": "~2.3.0",
+    "mkdirp": "*",
     "mongoose": "~3.8.8",
     "morgan": "~1.4.1",
     "multer": "~1.1.0",
