Preview View and multiple improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ editor:
     environment:
       - MONGOHQ_URL=mongodb://mongo:27017/material-dev
     volumes:
-      - "./data/uploads:./public/uploads"
+      - "./data/uploads:/home/cytoeditor/public/uploads"
     ports:
       - "3000:3000"
       - "35729:35729"
