--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "multer": "~1.1.0",
     "nodemailer": "~1.3.0",
     "passport": "~0.2.0",
-    "passport-facebook": "~1.0.2",
-    "passport-github": "~0.1.5",
-    "passport-google-oauth": "~0.1.5",
-    "passport-linkedin": "~0.1.3",
+    "passport-facebook": "~2.1.1",
+    "passport-github": "~1.1.0",
+    "passport-google-oauth": "~1.0.0",
+    "passport-linkedin": "*",
     "passport-local": "~1.0.0",
-    "passport-http": "*",
-    "passport-twitter": "~1.0.2",
+    "passport-http": "~0.3.0",
+    "passport-twitter": "~1.0.4",
     "swig": "~1.4.1"
   },
   "devDependencies": {
