--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,20 @@ editor:
     container_name: "editor"
     environment:
       - MONGOHQ_URL=mongodb://mongo:27017/material-dev
+      - PORT=3000
+      - FACEBOOK_ID=fb_id
+      - FACEBOOK_SECRET=sb_secret
+      - TWITTER_KEY=tw_key
+      - TWITTER_SECRET=tw_key
+      - GOOGLE_ID=g_id
+      - LINKEDIN_ID=l_id
+      - LINKEDIN_SECRET=l_secret
+      - GITHUB_ID=gh_id
+      - GITHUB_SECRET=gh_secret
+      - MAILER_FROM=cytopathologyeditor@ucm.es
+      - MAILER_SERVICE_PROVIDER=Gmail
+      - MAILER_EMAIL_ID=SMTP_email
+      - MAILER_PASSWORD=SMTP_pw
     volumes:
       - "./data/uploads:/home/cytoeditor/public/uploads"
     ports:
