--- a/package.json
+++ b/package.json
@@ -69,5 +69,11 @@
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
     "karma-phantomjs-launcher": "~0.1.2"
+  },
+  "peerDependencies": {
+    "grunt": "~0.4.1",
+    "grunt": "~0.4.0",
+    "grunt": "0.4.x",
+    "mocha": ">=1.20.0"
   }
 }
